add receipt controller