@@ -3,12 +3,15 @@ package com.sunny.scm.product.grpc;
 import com.sunny.scm.common.exception.AppException;
 import com.sunny.scm.grpc.product.*;
 import com.sunny.scm.product.constant.ProductErrorCode;
+import com.sunny.scm.product.entity.ProductPackage;
 import com.sunny.scm.product.repository.PackageRepository;
 import io.grpc.stub.StreamObserver;
 import lombok.RequiredArgsConstructor;
 import net.devh.boot.grpc.server.service.GrpcService;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @GrpcService
@@ -18,12 +21,22 @@ public class ProductCatalogServiceImpl extends ProductCatalogServiceGrpc.Product
     private final PackageRepository packageRepository;
 
     @Override
-    public void getProductPackage(GetProductPackagesRequest request,
-                                  StreamObserver<GetProductPackagesResponse> responseObserver) {
+    public void getProductPackages(GetProductPackagesRequest request,
+                                   StreamObserver<GetProductPackagesResponse> responseObserver) {
 
-        List<ProductPackage> productPackages = request.getPackageIdsList().stream()
-                .map(packageId -> packageRepository.findById(packageId)
-                        .orElseThrow(() -> new AppException(ProductErrorCode.PACKAGE_NOT_EXIST)))
+        List<Long> packageIds = request.getPackageIdsList();
+
+        List<ProductPackage> packageEntities = packageRepository.findAllById(packageIds);
+
+        Set<Long> foundIds = packageEntities.stream().map(ProductPackage::getId).collect(Collectors.toSet());
+        List<Long> missingIds = packageIds.stream()
+                .filter(id -> !foundIds.contains(id))
+                .toList();
+        if (!missingIds.isEmpty()) {
+            throw new AppException(ProductErrorCode.PACKAGE_NOT_EXIST);
+        }
+
+        List<com.sunny.scm.grpc.product.ProductPackage> productPackages = packageEntities.stream()
                 .map(pkg -> {
                     var productEntity = pkg.getProduct();
 
@@ -34,15 +47,15 @@ public class ProductCatalogServiceImpl extends ProductCatalogServiceGrpc.Product
                             .setProductName(productEntity.getProductName())
                             .setDescription(productEntity.getDescription() != null ? productEntity.getDescription() : "")
                             .setCategoryId(productEntity.getCategory() != null ? productEntity.getCategory().getId() : 0L)
-                            .setCategoryName(productEntity.getCategory().getCategoryName())
+                            .setCategoryName(productEntity.getCategory() != null ? productEntity.getCategory().getCategoryName() : "")
                             .setUnit(productEntity.getUnit() != null ? productEntity.getUnit() : "")
-                            .setStatus(productEntity.getStatus().name())
+                            .setStatus(productEntity.getStatus() != null ? productEntity.getStatus().name() : "")
                             .build();
 
-                    return ProductPackage.newBuilder()
+                    return com.sunny.scm.grpc.product.ProductPackage.newBuilder()
                             .setId(pkg.getId())
                             .setProductId(productEntity.getId())
-                            .setPackageType(pkg.getPackageType().name())
+                            .setPackageType(pkg.getPackageType() != null ? pkg.getPackageType().name() : "")
                             .setLength(pkg.getLength() != null ? pkg.getLength().doubleValue() : 0.0)
                             .setWidth(pkg.getWidth() != null ? pkg.getWidth().doubleValue() : 0.0)
                             .setHeight(pkg.getHeight() != null ? pkg.getHeight().doubleValue() : 0.0)
@@ -52,14 +65,19 @@ public class ProductCatalogServiceImpl extends ProductCatalogServiceGrpc.Product
                             .setProduct(product)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        // Build response chứa list
+        // Build response
         GetProductPackagesResponse response = GetProductPackagesResponse.newBuilder()
                 .addAllProductPackages(productPackages)
                 .build();
 
         responseObserver.onNext(response);
         responseObserver.onCompleted();
+    }
+
+    @Override
+    public void getProductPackage(GetProductPackagesRequest request, StreamObserver<GetProductPackagesResponse> responseObserver) {
+
     }
 }
